(executable
 (name fib)
 (modules fib)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))

(executable
 (name fibp)
 (modules fibp)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))

(executable
 (name client)
 (modules client)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))

(executable
 (name test_detach_main)
 (modules test_detach_main)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))

(executable
 (name fib_bench_parallel)
 (modules fib_bench_parallel)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))

(executable
 (name fib_bench_preemptive)
 (modules fib_bench_preemptive)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))

(executable
 (name fib_bench_sequential)
 (modules fib_bench_sequential))

(executables
 (names hash_parallel)
 (modules hash_parallel)
 (libraries mirage-crypto mirage-crypto-rng mirage-crypto-rng.lwt
   lwt lwt.unix))