(executable
 (name echo)
 (modules echo)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))

(executable
 (name fib)
 (modules fib)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))

(executable
 (name fibp)
 (modules fibp)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))

(executable
 (name test_rmain)
 (modules test_rmain)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))

(executable
 (name client)
 (modules client)
 (libraries lwt lwt.unix)
 (preprocess (pps lwt_ppx)))