(executable
 (name globroots_seq)
 (modules globroots_seq)
 (libraries globroots))

(executable
 (name globroots_sp)
 (modules globroots_sp)
 (libraries domainslib globroots))

(executable
 (name globroots_mp)
 (modules globroots_mp)
 (libraries globroots))

(executable
 (name globroots_young)
 (modules globroots_young)
 (libraries globroots))

(executable
 (name globroots_generational_register)
 (modules globroots_generational_register)
 (libraries globroots))

(executable
 (name globroots_classic_register)
 (modules globroots_classic_register)
 (libraries globroots))


(executable
 (name globroots_generational_register_mp)
 (modules globroots_generational_register_mp)
 (libraries globroots))

(executable
 (name globroots_classic_register_mp)
 (modules globroots_classic_register_mp)
 (libraries globroots))